examples/test/testpolicy17684.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17684
  namespace: namespace80
spec:
  podSelector:
    matchLabels:
      key9: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value34
          key11: value12
          key40: value24
      podSelector:
        matchLabels:
          key5: value10
